--- a/Analytics/barplots_murder.ipynb
+++ b/Analytics/barplots_murder.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "9eb7069c",
+   "id": "53bb1092",
    "metadata": {},
    "source": [
     "# Importing libraries"
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "22b20983",
+   "id": "afe49f1c",
    "metadata": {},
    "source": [
     "# Reading .csv Files"
@@ -29,17 +29,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 2,
    "id": "7ec0b207",
    "metadata": {},
    "outputs": [],
    "source": [
-    "murder_st = pd.read_csv(\"F:\\Downloads\\project_data\\murders_states.csv\", index_col = \"States\")"
+    "murder = pd.read_csv(\"F:\\Final Year Project\\Datasets\\murders.csv\", index_col = \"States\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 3,
    "id": "d889dda0",
    "metadata": {},
    "outputs": [
@@ -106,42 +106,280 @@
        "      <td>972</td>\n",
        "      <td>1007</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Goa</th>\n",
+       "      <td>33</td>\n",
+       "      <td>34</td>\n",
+       "      <td>26</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Gujarat</th>\n",
+       "      <td>993</td>\n",
+       "      <td>982</td>\n",
+       "      <td>1010</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Haryana</th>\n",
+       "      <td>1137</td>\n",
+       "      <td>1143</td>\n",
+       "      <td>1112</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Himachal Pradesh</th>\n",
+       "      <td>70</td>\n",
+       "      <td>91</td>\n",
+       "      <td>86</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Jharkhand</th>\n",
+       "      <td>1626</td>\n",
+       "      <td>1592</td>\n",
+       "      <td>1573</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Karnataka</th>\n",
+       "      <td>1314</td>\n",
+       "      <td>1331</td>\n",
+       "      <td>1357</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Kerala</th>\n",
+       "      <td>323</td>\n",
+       "      <td>306</td>\n",
+       "      <td>337</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Madhya Pradesh</th>\n",
+       "      <td>1795</td>\n",
+       "      <td>2101</td>\n",
+       "      <td>2034</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Maharashtra</th>\n",
+       "      <td>2142</td>\n",
+       "      <td>2163</td>\n",
+       "      <td>2330</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Manipur</th>\n",
+       "      <td>56</td>\n",
+       "      <td>46</td>\n",
+       "      <td>46</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Meghalaya</th>\n",
+       "      <td>68</td>\n",
+       "      <td>79</td>\n",
+       "      <td>80</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Mizoram</th>\n",
+       "      <td>22</td>\n",
+       "      <td>28</td>\n",
+       "      <td>24</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Nagaland</th>\n",
+       "      <td>25</td>\n",
+       "      <td>25</td>\n",
+       "      <td>27</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Odisha</th>\n",
+       "      <td>1356</td>\n",
+       "      <td>1470</td>\n",
+       "      <td>1394</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Punjab</th>\n",
+       "      <td>679</td>\n",
+       "      <td>757</td>\n",
+       "      <td>723</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Rajasthan</th>\n",
+       "      <td>1659</td>\n",
+       "      <td>1719</td>\n",
+       "      <td>1786</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Sikkim</th>\n",
+       "      <td>17</td>\n",
+       "      <td>11</td>\n",
+       "      <td>14</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Tamil Nadu</th>\n",
+       "      <td>1745</td>\n",
+       "      <td>1661</td>\n",
+       "      <td>1686</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Telangana</th>\n",
+       "      <td>839</td>\n",
+       "      <td>802</td>\n",
+       "      <td>1026</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Tripura</th>\n",
+       "      <td>144</td>\n",
+       "      <td>114</td>\n",
+       "      <td>122</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Uttar Pradesh</th>\n",
+       "      <td>3806</td>\n",
+       "      <td>3779</td>\n",
+       "      <td>3717</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Uttarakhand</th>\n",
+       "      <td>199</td>\n",
+       "      <td>160</td>\n",
+       "      <td>208</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>West Bengal</th>\n",
+       "      <td>1930</td>\n",
+       "      <td>1948</td>\n",
+       "      <td>1884</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>TOTAL STATES</th>\n",
+       "      <td>28194</td>\n",
+       "      <td>28493</td>\n",
+       "      <td>28605</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>A&amp;N Islands</th>\n",
+       "      <td>13</td>\n",
+       "      <td>5</td>\n",
+       "      <td>16</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Chandigarh</th>\n",
+       "      <td>26</td>\n",
+       "      <td>22</td>\n",
+       "      <td>17</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>D&amp;N Haveli and Daman &amp; Diu</th>\n",
+       "      <td>13</td>\n",
+       "      <td>13</td>\n",
+       "      <td>14</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Delhi</th>\n",
+       "      <td>521</td>\n",
+       "      <td>472</td>\n",
+       "      <td>459</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Jammu &amp; Kashmir</th>\n",
+       "      <td>119</td>\n",
+       "      <td>149</td>\n",
+       "      <td>136</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Ladakh</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Lakshadweep</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Puducherry</th>\n",
+       "      <td>29</td>\n",
+       "      <td>39</td>\n",
+       "      <td>19</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>TOTAL UT(S)</th>\n",
+       "      <td>721</td>\n",
+       "      <td>700</td>\n",
+       "      <td>667</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>TOTAL ALL INDIA</th>\n",
+       "      <td>28915</td>\n",
+       "      <td>29193</td>\n",
+       "      <td>29272</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                   2019  2020  2021\n",
-       "States                             \n",
-       "Andhra Pradesh      870   853   956\n",
-       "Arunachal Pradesh    60    45    49\n",
-       "Assam              1235  1131  1192\n",
-       "Bihar              3138  3150  2799\n",
-       "Chhattisgarh        913   972  1007"
+       "                             2019   2020   2021\n",
+       "States                                         \n",
+       "Andhra Pradesh                870    853    956\n",
+       "Arunachal Pradesh              60     45     49\n",
+       "Assam                        1235   1131   1192\n",
+       "Bihar                        3138   3150   2799\n",
+       "Chhattisgarh                  913    972   1007\n",
+       "Goa                            33     34     26\n",
+       "Gujarat                       993    982   1010\n",
+       "Haryana                      1137   1143   1112\n",
+       "Himachal Pradesh               70     91     86\n",
+       "Jharkhand                    1626   1592   1573\n",
+       "Karnataka                    1314   1331   1357\n",
+       "Kerala                        323    306    337\n",
+       "Madhya Pradesh               1795   2101   2034\n",
+       "Maharashtra                  2142   2163   2330\n",
+       "Manipur                        56     46     46\n",
+       "Meghalaya                      68     79     80\n",
+       "Mizoram                        22     28     24\n",
+       "Nagaland                       25     25     27\n",
+       "Odisha                       1356   1470   1394\n",
+       "Punjab                        679    757    723\n",
+       "Rajasthan                    1659   1719   1786\n",
+       "Sikkim                         17     11     14\n",
+       "Tamil Nadu                   1745   1661   1686\n",
+       "Telangana                     839    802   1026\n",
+       "Tripura                       144    114    122\n",
+       "Uttar Pradesh                3806   3779   3717\n",
+       "Uttarakhand                   199    160    208\n",
+       "West Bengal                  1930   1948   1884\n",
+       "TOTAL STATES                28194  28493  28605\n",
+       "A&N Islands                    13      5     16\n",
+       "Chandigarh                     26     22     17\n",
+       "D&N Haveli and Daman & Diu     13     13     14\n",
+       "Delhi                         521    472    459\n",
+       "Jammu & Kashmir               119    149    136\n",
+       "Ladakh                          0      0      5\n",
+       "Lakshadweep                     0      0      1\n",
+       "Puducherry                     29     39     19\n",
+       "TOTAL UT(S)                   721    700    667\n",
+       "TOTAL ALL INDIA             28915  29193  29272"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df = pd.DataFrame(murder_st)\n",
-    "df.head()"
+    "df = pd.DataFrame(murder)\n",
+    "df"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "316d3494",
+   "id": "7b7ab15b",
    "metadata": {},
    "source": [
-    "# Taking input state name :"
+    "# Taking input State/UT name :"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
-   "id": "b70f9375",
+   "execution_count": 6,
+   "id": "577290af",
    "metadata": {},
    "outputs": [
     {
@@ -159,7 +397,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d0b0ebd7",
+   "id": "00ff2575",
    "metadata": {},
    "source": [
     "# Plotting bar graphs :"
@@ -167,8 +405,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
-   "id": "9eb1db08",
+   "execution_count": 7,
+   "id": "58784196",
    "metadata": {},
    "outputs": [
     {
