--- a/Prediction/prediction.ipynb
+++ b/Prediction/prediction.ipynb
@@ -2287,7 +2287,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -2339,7 +2349,7 @@
        "      <td>41</td>\n",
        "      <td>199</td>\n",
        "      <td>1131</td>\n",
-       "      <td>1</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -2354,7 +2364,7 @@
        "      <td>16</td>\n",
        "      <td>366</td>\n",
        "      <td>1543</td>\n",
-       "      <td>0</td>\n",
+       "      <td>2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -2369,7 +2379,7 @@
        "      <td>14</td>\n",
        "      <td>723</td>\n",
        "      <td>2088</td>\n",
-       "      <td>0</td>\n",
+       "      <td>2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -2384,7 +2394,7 @@
        "      <td>4</td>\n",
        "      <td>173</td>\n",
        "      <td>795</td>\n",
-       "      <td>1</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -2399,7 +2409,7 @@
        "      <td>25</td>\n",
        "      <td>1021</td>\n",
        "      <td>1244</td>\n",
-       "      <td>0</td>\n",
+       "      <td>2</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -2421,26 +2431,27 @@
        "4                      49        4       25   1021                1244   \n",
        "\n",
        "   cluster  \n",
-       "0        1  \n",
-       "1        0  \n",
-       "2        0  \n",
-       "3        1  \n",
-       "4        0  "
+       "0        0  \n",
+       "1        2  \n",
+       "2        2  \n",
+       "3        0  \n",
+       "4        2  "
       ]
      },
-     "execution_count": 130,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df = ss\n",
+    "df = pd.read_csv(\"F:\\\\Final Year Project\\\\Datasets\\\\classfication_data_with_cluster_labels.csv\")\n",
+    "df.drop([\"Unnamed: 0\"],axis=1,inplace=True)\n",
     "df.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -2460,7 +2471,7 @@
        "Name: DISTRICT, Length: 807, dtype: int64"
       ]
      },
-     "execution_count": 131,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2478,7 +2489,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -2530,7 +2541,7 @@
        "      <td>41</td>\n",
        "      <td>199</td>\n",
        "      <td>1131</td>\n",
-       "      <td>1</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -2545,7 +2556,7 @@
        "      <td>16</td>\n",
        "      <td>366</td>\n",
        "      <td>1543</td>\n",
-       "      <td>0</td>\n",
+       "      <td>2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -2560,7 +2571,7 @@
        "      <td>14</td>\n",
        "      <td>723</td>\n",
        "      <td>2088</td>\n",
-       "      <td>0</td>\n",
+       "      <td>2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -2575,7 +2586,7 @@
        "      <td>4</td>\n",
        "      <td>173</td>\n",
        "      <td>795</td>\n",
-       "      <td>1</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -2590,7 +2601,7 @@
        "      <td>25</td>\n",
        "      <td>1021</td>\n",
        "      <td>1244</td>\n",
-       "      <td>0</td>\n",
+       "      <td>2</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -2612,14 +2623,14 @@
        "4                      49        4       25   1021                1244   \n",
        "\n",
        "   cluster  \n",
-       "0        1  \n",
-       "1        0  \n",
-       "2        0  \n",
-       "3        1  \n",
-       "4        0  "
+       "0        0  \n",
+       "1        2  \n",
+       "2        2  \n",
+       "3        0  \n",
+       "4        2  "
       ]
      },
-     "execution_count": 132,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2630,7 +2641,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2640,7 +2651,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2650,14 +2661,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\Md Mubeen Ali Zaki\\AppData\\Local\\Temp\\ipykernel_13392\\1817316301.py:4: DataConversionWarning: A column-vector y was passed when a 1d array was expected. Please change the shape of y to (n_samples,), for example using ravel().\n",
+      "C:\\Users\\Md Mubeen Ali Zaki\\AppData\\Local\\Temp\\ipykernel_16140\\1817316301.py:4: DataConversionWarning: A column-vector y was passed when a 1d array was expected. Please change the shape of y to (n_samples,), for example using ravel().\n",
       "  random_forest.fit(X_train,Y_train)\n"
      ]
     },
@@ -2665,7 +2676,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[1 1 1 ... 1 1 1]\n"
+      "[0 0 0 ... 0 0 0]\n"
      ]
     }
    ],
@@ -2681,23 +2692,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.9947735191637631\n",
+      "0.9941927990708479\n",
       "              precision    recall  f1-score   support\n",
       "\n",
-      "           0       0.95      1.00      0.97       162\n",
-      "           1       1.00      0.99      1.00      1553\n",
-      "           2       1.00      1.00      1.00         7\n",
+      "           0       1.00      0.99      1.00      1554\n",
+      "           1       1.00      1.00      1.00         7\n",
+      "           2       0.94      1.00      0.97       161\n",
       "\n",
       "    accuracy                           0.99      1722\n",
       "   macro avg       0.98      1.00      0.99      1722\n",
-      "weighted avg       1.00      0.99      0.99      1722\n",
+      "weighted avg       0.99      0.99      0.99      1722\n",
       "\n"
      ]
     }
@@ -2714,7 +2725,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2726,14 +2737,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Moderate Crime Rate Area\n"
+      "Low Crime Rate Area\n"
      ]
     }
    ],
