--- a/Prediction/prediction.ipynb
+++ b/Prediction/prediction.ipynb
@@ -2194,7 +2194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [
     {
@@ -2679,14 +2679,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Moderate Crime Rate Area\n"
+      "High Crime Rate Area\n"
      ]
     }
    ],
@@ -2695,11 +2695,11 @@
     "features = pd.DataFrame(features)\n",
     "y_pred = cls.predict(features)\n",
     "if y_pred[0] == 0:         \n",
-    "    label=\"Moderate Crime Rate Area\"\n",
+    "    label=\"High Crime Rate Area\"\n",
     "elif y_pred[0] == 1:\n",
-    "    label=\"Low Crime Rate Area\"\n",
+    "    label=\"Moderate Crime Rate Area\"\n",
     "elif y_pred[0] == 2:\n",
-    "    label = \"High Crime Rate Area\"\n",
+    "    label = \"Low Crime Rate Area\"\n",
     "print(label)"
    ]
   },
