--- a/test.ipynb
+++ b/test.ipynb
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -66,7 +66,7 @@
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mIndexError\u001b[0m                                Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[5], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m t \u001b[39m=\u001b[39m \u001b[39mint\u001b[39m(features[\u001b[39m0\u001b[39m][\u001b[39m2\u001b[39m]) \u001b[39m-\u001b[39m df1\u001b[39m.\u001b[39;49mloc[df1[\u001b[39m\"\u001b[39;49m\u001b[39mSTATE/UT\u001b[39;49m\u001b[39m\"\u001b[39;49m]\u001b[39m==\u001b[39;49mfeatures[\u001b[39m0\u001b[39;49m][\u001b[39m0\u001b[39;49m]]\u001b[39m.\u001b[39;49mloc[df1[\u001b[39m\"\u001b[39;49m\u001b[39mDISTRICT\u001b[39;49m\u001b[39m\"\u001b[39;49m]\u001b[39m==\u001b[39;49mfeatures[\u001b[39m0\u001b[39;49m][\u001b[39m1\u001b[39;49m]][\u001b[39m'\u001b[39;49m\u001b[39mYEAR\u001b[39;49m\u001b[39m'\u001b[39;49m]\u001b[39m.\u001b[39;49mvalues[\u001b[39m-\u001b[39;49m\u001b[39m1\u001b[39;49m]\n\u001b[0;32m      2\u001b[0m t\n",
+      "Cell \u001b[1;32mIn[6], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m t \u001b[39m=\u001b[39m features[\u001b[39m0\u001b[39m][\u001b[39m2\u001b[39m] \u001b[39m-\u001b[39m df1\u001b[39m.\u001b[39;49mloc[df1[\u001b[39m\"\u001b[39;49m\u001b[39mSTATE/UT\u001b[39;49m\u001b[39m\"\u001b[39;49m]\u001b[39m==\u001b[39;49mfeatures[\u001b[39m0\u001b[39;49m][\u001b[39m0\u001b[39;49m]]\u001b[39m.\u001b[39;49mloc[df1[\u001b[39m\"\u001b[39;49m\u001b[39mDISTRICT\u001b[39;49m\u001b[39m\"\u001b[39;49m]\u001b[39m==\u001b[39;49mfeatures[\u001b[39m0\u001b[39;49m][\u001b[39m1\u001b[39;49m]][\u001b[39m'\u001b[39;49m\u001b[39mYEAR\u001b[39;49m\u001b[39m'\u001b[39;49m]\u001b[39m.\u001b[39;49mvalues[\u001b[39m-\u001b[39;49m\u001b[39m1\u001b[39;49m]\n\u001b[0;32m      2\u001b[0m t\n",
       "\u001b[1;31mIndexError\u001b[0m: index -1 is out of bounds for axis 0 with size 0"
      ]
     }
@@ -74,6 +74,66 @@
    "source": [
     "t = features[0][2] - df1.loc[df1[\"STATE/UT\"]==features[0][0]].loc[df1[\"DISTRICT\"]==features[0][1]]['YEAR'].values[-1]\n",
     "t"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>STATE/UT</th>\n",
+       "      <th>DISTRICT</th>\n",
+       "      <th>YEAR</th>\n",
+       "      <th>MURDER</th>\n",
+       "      <th>ATTEMPT TO MURDER</th>\n",
+       "      <th>RAPE</th>\n",
+       "      <th>KIDNAPPING &amp; ABDUCTION</th>\n",
+       "      <th>DACOITY</th>\n",
+       "      <th>ROBBERY</th>\n",
+       "      <th>THEFT</th>\n",
+       "      <th>HURT/GREVIOUS HURT</th>\n",
+       "      <th>cluster</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "Empty DataFrame\n",
+       "Columns: [STATE/UT, DISTRICT, YEAR, MURDER, ATTEMPT TO MURDER, RAPE, KIDNAPPING & ABDUCTION, DACOITY, ROBBERY, THEFT, HURT/GREVIOUS HURT, cluster]\n",
+       "Index: []"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df1.loc[df1[\"STATE/UT\"]==1].loc[df1[\"DISTRICT\"]==305]"
    ]
   },
   {
